--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
     "type": "module",
     "scripts": {
-        "dev": "node app.js"
+        "dev": "node app.js",
+        "test": "node test.js"
     },
     "dependencies": {
         "dotenv": "^16.3.1",
+        "fast-csv": "^5.0.0",
         "nanoid": "^5.0.4",
-        "openai": "^4.24.7"
+        "openai": "^4.24.7",
+        "sqlite": "^5.1.1",
+        "sqlite3": "^5.1.7"
     }
 }
