--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     },
     "dependencies": {
         "dotenv": "^16.3.1",
+        "facebook-nodejs-business-sdk": "^18.0.4",
         "fast-csv": "^5.0.0",
+        "firebase": "^10.7.2",
         "nanoid": "^5.0.4",
         "openai": "^4.24.7",
         "pg": "^8.11.3",
