--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "nanoid": "^5.0.4",
         "openai": "^4.24.7",
         "pg": "^8.11.3",
+        "pg-promise": "^11.5.4",
         "sqlite": "^5.1.1",
         "sqlite3": "^5.1.7"
     }
