--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "facebook-nodejs-business-sdk": "^18.0.4",
         "fast-csv": "^5.0.0",
         "firebase": "^10.7.2",
+        "gtts": "^0.2.1",
         "nanoid": "^5.0.4",
         "openai": "^4.24.7",
         "pg": "^8.11.3",
