--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "dotenv": "^16.3.1",
+        "ejs": "^3.1.9",
         "facebook-nodejs-business-sdk": "^18.0.4",
         "fast-csv": "^5.0.0",
         "firebase": "^10.7.2",
